# miniscience

./: README.md
Lab1/: CMakeLists.txt  model.cpp  torus.cpp
Lab2/: CMakeLists.txt  model.cpp
Lab3/: CMakeLists.txt  Poisson.cpp  Poisson.h  Poisson.ufl
